# singularity

./: .gitignore  configure.ac  go.mod  singularity.spec.in
cmd/internal/cli/: actions_linux.go
cmd/singularity/: build_test.go
cmd/singularity/cli/: action_flags.go  actions.go  instance_start.go  singularity.go
cmd/starter/: main_linux.go
cmd/starter/c/: starter.c
e2e/: suite.go
e2e/example/: example.go
e2e/scripts/example/: example.test
etc/: Makefile.am  fuse.sh
etc/network/: bridge.conf
internal/app/starter/: master_linux.go  master_linux_test.go
internal/pkg/runtime/engine/singularity/: container_linux.go  prepare_linux.go  process_linux.go
internal/pkg/runtime/engines/singularity/: config.go  container.go  process_linux.go
libexec/: Makefile.am  network
libexec/cli/: action_argparser.sh  apps.exec  check.exec  exec.exec  help.exec  image.export.exec  image.import.exec  inspect.exec  instance.list.exec  instance.start.exec  mount.exec  run.exec  shell.exec  test.exec
mlocal/frags/: Makefile.stub
pkg/plugin/v3/: go.mod  go.sum
pkg/util/unix/: socket.go
scripts/: ci-rpm-build-test
src/: Makefile.am  wrapper.c
src/command/: Makefile.am  action.c  command.h  mount.c  start.c
src/command/action-lib/: action.c  mount.c  start.c
src/lib/: Makefile.am
src/lib/event/: Makefile.am  event.c  event.h
src/lib/event/cleanup/: Makefile.am  cleanup.c  cleanup.h
src/lib/event/notify/: Makefile.am  notify.c  notify.h
src/lib/event/signal/: Makefile.am  signal.c  signalev.h
src/lib/image/: bind.c  image.c  image.h
src/lib/image/ext3/: init.c  mount.c
src/lib/runtime/autofs/: autofs.c
src/lib/runtime/mounts/cwd/: cwd.c
src/lib/runtime/mounts/kernelfs/: kernelfs.c
src/lib/runtime/ns/: ns.c
src/lib/runtime/ns/net/: net.c
src/lib/runtime/ns/pid/: pid.c
src/lib/runtime/overlayfs/: overlayfs.c
src/runtime/c/startup/: wrapper.c
src/runtime/engines/singularity/: container.go
src/runtime/fused/: daemon.go
src/runtime/startup/: rpc.go  scontainer.go  smaster.go
src/util/: Makefile.am  capability.c  capability.h  daemon.c  fork.c  fork.h  message.c  mount.c  network.c  network.h  privilege.c  proc_notify.c  proc_notify.h  sessiondir.c  signal.c  signal.h
